button の境界の角丸 \(border-radius\) を 20px に指定

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -5,6 +5,7 @@
      button {
         background-color: blue;
         font-family: Times;
+        border-radius: 20px
     }
     
     #minuteStr {
