border-radiusのセミコロンを忘れていたので追加

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -5,7 +5,8 @@
      button {
         background-color: blue;
         font-family: Times;
-        border-radius: 20px
+        border-radius: 20px;
+        
     }
     
     #minuteStr {
