button \{　の中のbackground-colorをcolorに変更

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -3,10 +3,10 @@
         background-color: skyblue;
     }
      button {
-        background-color: blue;
+        color: blue;
         font-family: Times;
         border-radius: 20px;
-        
+
     }
     
     #minuteStr {
