--- a/www/css/style.css
+++ b/www/css/style.css
@@ -70,6 +70,10 @@
         font-size: 10px;
         position:absolute; top:380px; left:70%; width:28%; height:60px; 
     }
+     #btnD {
+        font-size: 20px;
+        position:absolute; top:500px; left:10%; width:28%; height:60px; 
+    }
     
     #minute {
         font-size: 30px;
