--- a/www/css/style.css
+++ b/www/css/style.css
@@ -70,9 +70,13 @@
         font-size: 10px;
         position:absolute; top:380px; left:70%; width:28%; height:60px; 
     }
-     #btnD {
+    #btnD {
         font-size: 20px;
         position:absolute; top:500px; left:10%; width:28%; height:60px; 
+    }
+    #btnE {
+        font-size: 18px;
+        position:absolute; top:500px; left:50%; width:28%; height:60px; 
     }
     
     #minute {
