--- a/www/css/style.css
+++ b/www/css/style.css
@@ -70,6 +70,7 @@
     #btnC {
         font-size: 10px;
         position:absolute; top:380px; left:70%; width:28%; height:60px; 
+        background-color: rgb(153, 0, 255);
     }
     #btnD {
         font-size: 20px;
