--- a/www/css/style.css
+++ b/www/css/style.css
@@ -75,10 +75,12 @@
     #btnD {
         font-size: 19px;
         position:absolute; top:500px; left:10%; width:28%; height:60px; 
+        background-color: rgb(255, 89, 186);
     }
     #btnE {
         font-size: 18px;
         position:absolute; top:500px; left:50%; width:28%; height:60px; 
+        background-color: rgb(0, 255, 85);
     }
     
     #minute {
