--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,6 +1,6 @@
 /**/
     body {
-        background-color: skyblue;
+        background-color: rgb(19, 207, 44);
     }
      button {
         color: blue;
